--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,14 +12,23 @@ jobs:
   autogreen:
     runs-on: ubuntu-latest
     steps:
-      - name: Clone repository
-        uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v2
 
-      - name: Auto green
+      - name: Pull
         run: |
-          git config --local user.email "501801307@qq.com"
-          git config --local user.name "zhuxindong"
-          git remote set-url origin https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+          git config --local user.name "${{ github.actor }}"
+          git config --local user.email "${{ github.actor }}@gmail.com"
+          git remote set-url origin https://${{ github.repository_owner }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           git pull --rebase
-          git commit --allow-empty -m "a commit a day keeps your girlfriend away"
-          git push
+
+      - name: Commit (default)
+        if: github.event.inputs.log == 0
+        run: git commit --allow-empty -m "a commit a day keeps your girlfriend away"
+
+      - name: Commit (input)
+        if: github.event.inputs.log != 0
+        run: git commit --allow-empty -m "${{ github.event.inputs.log }}"
+
+      - name: Push
+        run: git push
