--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,23 +12,14 @@ jobs:
   autogreen:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - name: Clone repository
+        uses: actions/checkout@v3
 
-      - name: Pull
+      - name: Auto green
         run: |
-          git config --local user.name "${{ github.actor }}"
-          git config --local user.email "${{ github.actor }}@gmail.com"
-          git remote set-url origin https://${{ github.repository_owner }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+          git config --local user.email "501801307@qq.com"
+          git config --local user.name "zhuxindong"
+          git remote set-url origin https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           git pull --rebase
-
-      - name: Commit (default)
-        if: github.event.inputs.log == 0
-        run: git commit --allow-empty -m "a commit a day keeps your girlfriend away"
-
-      - name: Commit (input)
-        if: github.event.inputs.log != 0
-        run: git commit --allow-empty -m "${{ github.event.inputs.log }}"
-
-      - name: Push
-        run: git push
+          git commit --allow-empty -m "a commit everyday"
+          git push
